# ros_mm

./: README.md
elastic_roadmap/: CMakeLists.txt  package.xml
elastic_roadmap/savedMaps/: afterRunning  coarse_Graph  completeGraph  square_center_4  testGraph  testGraph_4  testSave
elastic_roadmap/scripts/: createGraph.py  loadGraph.py  stdout_temp.txt  testGraph.py
elastic_roadmap/src/: EuclideanConnector.py  MPCConnectorMM.py  elasticPlanner.py  elastic_map.py  mapLoader.py  obstacleArray.py  params.py  robotModel.py  stdout_temp.txt
mm_msgs/: CMakeLists.txt  package.xml
mm_msgs/msg/: ActiveInferenceGoal.msg  MobileRobotPose.msg
mm_msgs/srv/: MMIk.srv
mobile_control/: CMakeLists.txt  package.xml
mobile_control/config/: boxer_control.yaml  gazebo_pid.yaml  mmrobot_control.yaml  mmrobot_moveit_control.yaml  panda_control.yaml  panda_controllers.yaml  panda_explicit.yaml  robot_localization.yaml
mobile_control/scripts/: gripper_example.py  multiJointControlNode.py  multiJointControlPositionNode.py  send_goal_arm.py  simpleTestControls.py
mobile_control/src/: pick_place_tutorial.cpp
mobile_ik/: CMakeLists.txt  package.xml
mobile_ik/config/: ik_params.yaml
mobile_ik/scripts/: mm_ik_client
mobile_ik/src/: ik.cpp  ik_service.cpp
mobile_manipulator/: CMakeLists.txt  package.xml
mobile_manipulator/boxer_custom_description/: package.xml
mobile_manipulator/boxer_custom_description/cmake/: boxer_descriptionConfig.cmake
mobile_manipulator/boxer_custom_description/urdf/: boxer.gazebo.xacro  boxer.urdf.xacro  boxer.xacro
mobile_manipulator/boxer_description/: boxer.gazebo.xacro  boxer.urdf.xacro  boxer.xacro
mobile_manipulator/boxer_description/urdf/: boxer.gazebo.xacro  boxer.transmission.xacro  boxer.urdf.xacro  boxer.xacro
mobile_manipulator/franka_description/robots/: hand.xacro  panda.gazebo.xacro  panda.transmission.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro
mobile_manipulator/launch/: boxer_control.launch  boxer_gazebo.launch  empty_world.launch  mmrobot_control.launch  mmrobot_gazebo.launch  mmrobot_gazebo_mpc.launch  panda_control.launch  panda_explicit.launch  panda_gazebo.launch  store.launch
mobile_manipulator/models/urdf/: rooms.urdf.xacro  simple_box.urdf
mobile_manipulator/robot_description/: b.urdf  boxer.urdf.xacro  mmrobot.urdf.xacro  panda.urdf.xacro  t.urdf
mobile_manipulator/scripts/: curStatePublisherMM  goToJointGoal.py  odomTFBroadcasterBase
mobile_manipulator/src/: odom_pub.cpp
mobile_manipulator/world/: supermarket.dae
mobile_manipulator/world/meshes/: basket.dae  shelves.dae  sphere.dae
mobile_manipulator/world/urdf/: airlab_mockup.urdf.xacro  cell.xacro  sphere.xacro  sphere_store.urdf.xacro
mobile_moveit/: .setup_assistant  CMakeLists.txt  package.xml
mobile_moveit/config/: chomp_planning.yaml  controller.yaml  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  mmrobot_description.srdf  ompl_planning.yaml  (+2 more)
mobile_mpc/: CMakeLists.txt  package.xml
mobile_navigation/: CMakeLists.txt  CMakeLists.txt_BACKUP  package.xml
mobile_navigation/launch/: amcl.launch  ekf.launch  gmapping.launch  localization.launch  map_creation.launch  mmrobot_navigation.launch  move_base.launch  octomap_mapping.launch  teleop.launch
mobile_navigation/maps/: good_map.yaml  inital_map.pgm  inital_map.yaml  mockup_store.bt
mobile_navigation/param/: costmap_common_params_boxer.yaml  dual_robot_localization.yaml  robot_localization.yaml
mobile_navigation/rviz/: localization.rviz  map_creation.rviz  mmrobot_depth_camera.rviz  mmrobot_navigation.rviz  navigation.rviz
mobile_navigation/scripts/: RigidBodyPlanning.py  control_joystick.py  control_joystick_vel.py  coupledAction.py  createSimpleTrajectory.py  pathPlanning.py  sendSimpleGoal.py  teleop_twist_keyboard.py
mobile_navigation/src/: fibonacci_client.cpp  listener.cpp  sendGoalClient.cpp  talker.cpp
mobile_stomp/: CMakeLists.txt  package.xml
moveit_config/: .setup_assistant  package.xml
(+87 files in other folders)
