<?xml version="1.0"?>
<package format="2">
  <name>mobile_ik</name>
  <version>0.0.0</version>
  <description>The mobile_ik package</description>

  <maintainer email="m.spahn@tudelft.nl">mspahn</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mobile_manipulator</build_depend>
  <build_depend>mm_msgs</build_depend>
  <build_depend>boost</build_depend>
  <depend>trac_ik_lib</depend>
  <build_depend>orocos_kdl</build_depend>
  <build_export_depend>mobile_manipulator</build_export_depend>
  <exec_depend>mobile_manipulator</exec_depend>
  <exec_depend>mm_msgs</exec_depend>
  
  <depend>trac_ik_kinematics_plugin</depend>


</package>
